--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,9 @@ html {
 
 /* App styling */
 .App {
-  background: linear-gradient(270deg, #9c0c64, #690843);
+  background: url("./assets/img/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100vw;
   min-height: 100vh;
 }
@@ -87,8 +89,9 @@ html {
   display: flex;
   margin-top: 10px;
   justify-content: center;
-  width: 80vw;
-  height: 80vh;
+  width: 90vw;
+  height: 88vh;
+  position: relative;
 }
 
 .close-button {
@@ -100,7 +103,6 @@ html {
   font-family: var(--primary-font);
   font-size: x-large;
   font-weight: 700;
-  background-color: rgb(255, 97, 229);
 }
 
 .press-close {
@@ -110,4 +112,13 @@ html {
   color: whitesmoke;
   font-weight: 500;
   font-size: larger;
+}
+
+.iframe-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
 }
