--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ html {
 
 /* App styling */
 .App {
-  background: url("./img/bg.jpg");
+  background-image: url("/img/bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   width: 100vw;
